--- a/kukhta/src/index.css
+++ b/kukhta/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  h3 {
+    @apply font-semibold;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  button {
+    @apply border-0 bg-transparent hover:bg-gray-300 hover:text-white transition;
+  }
+
+  .container {
+    @apply text-xs md:text-sm mb-8 md:mt-7;
+  }
+
+  .container p {
+    @apply mb-2;
+  }
+
+  .container ul {
+    @apply mt-4 mb-8 list-disc ml-6;
+  }
 }
